--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,293 @@
+@import url('https://fonts.googleapis.com/css2?family=Kumbh+Sans:wght@400;700&display=swap');
+
+:root {
+  --orange: hsl(26, 100%, 55%);
+  --pale-orange: hsl(25, 100%, 94%);
+  --blue-900: hsl(220, 13%, 13%);
+  --blue-600: hsl(219, 9%, 45%);
+  --blue-400: hsl(220, 14%, 75%);
+  --blue-200: hsl(223, 64%, 98%);
+  --fw-400: 400;
+  --fw-700: 700;
+}
+
+*,
+*::after,
+*::before {
+  padding: 0;
+  margin: 0;
+  box-sizing: border-box;
+}
+
+body {
+  font-family: 'Kumbh Sans', sans-serif;
+  font-size: 16px;
+  line-height: 1.6;
+}
+
+li {
+  list-style: none;
+}
+
+a {
+  text-decoration: none;
+}
+
+button {
+  border: none;
+  border-radius: 8px;
+  cursor: pointer;
+}
+
 .App {
-  text-align: center;
-}
-
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
-}
-
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
+  margin: 0 10%;
 }
 
 .App-header {
-  background-color: #282c34;
-  min-height: 100vh;
+  padding: 1.6em 1em;
+  /* height: 70px; */
+  border-bottom: 1px solid var(--blue-400);
+}
+
+.navbar--product {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+}
+
+.nav--lg-left,
+.nav--item-left,
+.nav--lg-right {
+  display: flex;
+  align-items: center;
+}
+
+.nav--lg-left {
+  gap: 2.6em;
+}
+
+.nav--item-left {
+  gap: 1.6em;
+  color: var(--blue-600);
+}
+
+.nav--lg-right {
+  gap: 2.4em;
+}
+
+.user-pic {
+  height: 55px;
+  width: 55px;
+}
+
+.user-pic img {
+  width: 100%;
+  height: 100%;
+}
+
+.product--section{
+  margin: 8% 2% 0 6%;
+  display: grid;
+  gap: 6em;
+  grid-template-columns: repeat(2, 1fr);
+  place-content: center;
+}
+
+.left--section-product{
   display: flex;
   flex-direction: column;
+  gap: 2em;
+}
+
+.big--img{
+  max-height: 450px;
+  width: 100%;
+}
+.big--img img{
+  height: 100%;
+  width: 100%; border-radius: 12px;
+}
+.small--img{
+  display: flex;
+  gap: 2em;
+}
+.sm-img{
+  height: 90px;
+  width:25%;
+  border-radius: 12px;
+}
+.sm-img img{
+  height: 100%;
+  width: 100%;
+  border-radius: 12px;
+}
+.active{
+  outline: 3px solid var(--orange);
+  
+}
+.active img{
+  opacity: 0.4;
+}
+.cart{
+  position: relative;
+  cursor: pointer;
+}
+.cart--item-container{
+  position: absolute;
+  top: 52px;
+ left: -142px;
+  background-color: #fff;
+  border-radius: 8px;
+  box-shadow: 0px 25px 15px rgba(0, 0, 0, 0.1);
+  width: 375px;
+}
+.cart--item--price-container{
+  display: flex;
+  gap: 0.28em;
+}
+.cart--item-header{
+  border-bottom: 1px solid var(--blue-600);
+  padding: 1em;
+  font-weight: var(--fw-700);
+}
+.cart--item{
+  display: grid;
+  grid-template-columns: 20% 1fr 5%;
+  padding: 1.4em;
+  column-gap: 1em;
+  color: var(--blue-600);
+}
+.cart--item-img{
+  grid-column: 1/2;
+  height: 60px;
+}
+.cart--item-img img {
+  width: 100%;
+  height: 100%;
+  border-radius: 6px;
+}
+.cart--item-details{
+  grid-column: 2/3;
+}
+.cart--item-delete{
+  grid-column: 3/4;
+  background-color: transparent;
+  color: var(--blue-400);
+}
+.cart--item-total{
+  color: var(--blue-900);
+  font-weight: var(--fw-700);
+}
+.cart--checkout{
+ 
+  margin-bottom: 1.8em;
+  display: flex;
+  justify-content: center;
+
+}
+.cart--checkout-btn{
+  background-color: var(--orange);
+  color: #fff;
+  width: 90%;
+  padding: 1em;
+}
+.number--0f-items{
+  position: absolute;
+  top: -6px;
+  right: -6px;
+  color: #fff;
+  background-color:var(--orange);
+  width: 16px;
+  height: 13px;
+  font-size: 10px;
+  /* padding: 0.2em 0.8em; */
+  text-align: center;
+  border-radius: 5px;
+  cursor: initial;
+}
+/* Product detalis section */
+.right--section-product{
+  place-self: center;
+}
+.company--title{
+  color: var(--orange);
+  font-weight: var(--fw-700);
+  text-transform: uppercase;
+  margin-bottom: 0.8em;
+  font-size: 15px;
+}
+.product--offer{
+  font-size: 2.7rem;
+  line-height: 1.2;
+}
+.product--description{
+  color: var(--blue-600);
+  margin-top: 1.4em;
+}
+.price--details{
+  display: flex;
+  gap: 1em;
+  align-items: center;
+  line-height: 1.6;
+  margin-top: 1em;
+}
+.product--price{
+  font-weight: var(--fw-700);
+  font-size: 1.8rem;
+}
+.product--discount{
+  color: var(--orange);
+  font-weight: var(--fw-700);
+  background-color: var(--pale-orange);
+  padding: 0.3em 0.7em;
+  border-radius: 2px;
+  text-align: center;
+}
+
+.product--prev-price{
+  color: var(--blue-400);
+  font-weight: var(--fw-400);
+}
+.buy--button{
+  display: flex;
+  gap: 1.8em;
+  margin-top: 1.4em;
+}
+.order-number-btn{
+  background-color: var(--blue-200);
+  padding: 1em 1.4em;
+  color: var(--orange);
+  font-weight: var(--fw-700);
+}
+.order-number-btn-left{
+  border-top-right-radius: 0px;
+  border-bottom-right-radius: 0px;
+}
+.order-number-btn-right{
+  border-top-left-radius: 0px;
+  border-bottom-left-radius: 0px;
+}
+.order--input{
+  background-color: var(--blue-200);
+  color: var(--orange);
+  width: 40px;
+  height: 30px;
+  padding: 1.6em 0em;
+  font-weight: var(--fw-700);
+  border: none;
+  text-align: center;
+}
+.order--input:focus{
+  outline: none;
+}
+.add-to-cart{
+  width: 50%;
+  background-color: var(--orange);
+  color: #fff;
+  padding-block: 1em;
+  display: flex;
+  gap: 1em;
   align-items: center;
   justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
-}
-
-.App-link {
-  color: #61dafb;
-}
-
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+  font-weight: var(--fw-700);
 }
